# pr-review-bot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pr_review_bot/: __init__.py  config.py  github_client.py  poller.py  poster.py  state.py
tests/: conftest.py  test_config.py  test_e2e.py  test_poller.py  test_poster.py  test_state.py
